@@ -11,8 +11,8 @@ case config['devise']
     gem 'devise', '>= 2.1.0.rc'
     recipes << 'devise-confirmable'
   when 'invitable'
-    gem 'devise', '>= 2.0.4'
-    gem 'devise_invitable', '>= 1.0.0'
+    gem 'devise', '>= 2.1.0.rc'
+    gem 'devise_invitable', '>= 1.0.1'
     recipes << 'devise-confirmable'
     recipes << 'devise-invitable'
   else
